--- a/roles/fpp_common/tasks/patch_status.yml
+++ b/roles/fpp_common/tasks/patch_status.yml
@@ -3,8 +3,12 @@
   become_user: 'oracle'
   become_method: 'sudo'
   shell: |
-    {{ rhpctl_path }} query workingcopy -workingcopy {{ wc_name }} -details | egrep '' 
+    {{ rhpctl_path }} query workingcopy -workingcopy {{ wc_name }} -details '' 
   ignore_errors: '{{ ignore_errors_flag }}'
-  register: 'query_wc_move_status'
-- msg: '{{ query_wc_result }}' 
-  when: query_wc_move_status.stdout | regex_search("Software only: false")
+  register: 'query_wc_result'
+- debug:
+    msg: '{{ query_wc_result }}'
+- set_fact:
+    completion_status: '{{ query_wc_result.stdout | regex_search("Software only\: false") }}'
+- debug:
+    msg: '{{ completion_status }}'
