--- a/roles/rdbms_fpp/tasks/rdbms_wc_delete.yml
+++ b/roles/rdbms_fpp/tasks/rdbms_wc_delete.yml
@@ -1,7 +1,36 @@
 
-- name: 'Get WC Name and Check if Exists'
-  include_tasks: 'rdbms_wc_name.yml'
-  when: orphan_home is not defined or orphan_home is false
+# Delete home from OCI
+
+- name: 'Find VM Cluster OCID'
+  include_role:
+    name: 'target_common'
+    tasks_from: '{{ exadata_type }}_ocid.yml'
+
+- block:
+  - name: 'Delete DB Home'
+    include_role:
+      name: 'oci_common'
+      tasks_from: 'db_home_delete.yml'
+  delegate_to: localhost
+
+- name: 'Get client name for the DB home path'
+  include_role:
+    name: 'target_common'
+    tasks_from: 'dbhome_client_info.yml'
+
+
+- block:
+  - name: 'Get working Copy name and check if exists'
+    include_role:
+      name: 'fpp_common'
+      tasks_from: 'wc_query_homepath.yml'
+    vars:
+      client: '{{ client_name }}'
+      path: '{{ oracle_home }}'
+    set_fact:
+    wc_name: '{{ query_wc_name_from_path.stdout | first }}'
+  debug: { var: wc_name }
+  delegate_to: '{{ fpp_host }}'
 
 # Delete home from FPP (metadata only)
 
@@ -16,16 +45,3 @@
   when: wc_name is defined
   delegate_to: '{{ fpp_host }}'
 
-# Delete home from OCI
-
-- name: 'Find VM Cluster OCID'
-  include_role:
-    name: 'target_common'
-    tasks_from: '{{ exadata_type }}_ocid.yml'
-
-- block:
-  - name: 'Delete DB Home'
-    include_role:
-      name: 'oci_common'
-      tasks_from: 'db_home_delete.yml'
-  delegate_to: localhost
