--- a/roles/fpp_common/tasks/wc_query_homepath.yml
+++ b/roles/fpp_common/tasks/wc_query_homepath.yml
@@ -1,3 +1,4 @@
+# query working copy name from db home path
 - name: 'Query Working Copy For {{ oracle_home }}'
   become: 'true'
   become_user: 'oracle'
