--- a/roles/fpp_common/tasks/wc_delete.yml
+++ b/roles/fpp_common/tasks/wc_delete.yml
@@ -4,6 +4,6 @@
   become_user: 'oracle'
   become_method: 'sudo'
   shell: |
-    {{ rhpctl_path }} delete workingcopy -workingcopy {{ wc_name }} {{ metadata_param }} -targetnode {{ target_node }} -auth sshkey -arg1 user:opc -arg2 identity_file:{{ identity_file }} -arg3 sudo_location:/bin/sudo
+    {{ rhpctl_path }} delete workingcopy -workingcopy {{ wc_name }} {{ metadata_param }} -targetnode {{ target_node }} -auth sshkey -arg1 user:opc -arg2 identity_file:{{ identity_file }} -arg3 sudo_location:/bin/sudo -direct
   register: 'delete_wc_result'
 - debug: { msg: '{{ delete_wc_result }}' }
