--- a/roles/target_common/tasks/dbhome_purge.yml
+++ b/roles/target_common/tasks/dbhome_purge.yml
@@ -2,6 +2,6 @@
   become: 'true'
   become_user: 'root'
   shell:  |
-    {{ dbaascli_path }} dbhome purge --hname {{ db_home_name }} --noprompt YES
+    {{ dbaascli_path }} dbhome delete --oracleHomeName {{ db_home_name }} --noprompt YES
   register: 'dbhome_purge_result'
 - debug: { msg: '{{ dbhome_purge_result }}' }
